# bank-accounts-manager

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile-uml  Makefile  README.md  cspell.json
.github/actions/setup/: action.yaml
.github/workflows/: build-test-lint.yaml  build.yaml  cpp-linter.yml  docs.yaml  lint.yaml  main.yaml  test.yaml
include/: account_info.h  bank_account.h  bank_account_old.h  cd_account.h  checking_account.h  console_interface.h  hi_checking_account.h  hi_savings_account.h  interest_handler.h  money_type.h  monthly_statement.h  nosc_checking_account.h  savings_account.h  sc_checking_account.h
include/util/: date_util.h  util.h
scripts/: lint.sh
src/: console_interface.cpp  main.cpp
src/bank_account/: account_info.cpp  cd_account.cpp  hi_checking_account.cpp  hi_savings_account.cpp  interest_handler.cpp  nosc_checking_account.cpp  savings_account.cpp  sc_checking_account.cpp
test/: .clang-tidy  test_accounts.cpp  test_example.cpp  test_money.cpp
